# esempio_eRPC

./: README.md  prova.erpc
cpp/: main.cpp
cpp/cln/: CMakeLists.txt
cpp/erpc_c/config/: erpc_config.h
cpp/erpc_c/port/: erpc_serial.cpp
cpp/prog/: pippo.h  pippo_client.cpp  pippo_server.cpp  pippo_server.h
cpp/srv/: CMakeLists.txt
prova/: cln.py  srv.py
prova/prog/: __init__.py
prova/prog/pippo/: __init__.py  client.py  common.py  interface.py  server.py
